--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
 
 html,
 body {
+	scroll-behavior: smooth;
 	margin: 0;
 	padding: 0;
 }
 
-/* use viewport-relative units to cover page fully */
 body {
 	height: 100vh;
 	width: 100vw;
@@ -14,7 +14,6 @@ body {
 	overflow-x: hidden;
 }
 
-/* include border and padding in element width and height */
 * {
 	box-sizing: border-box;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -55,31 +54,24 @@ body {
 	flex-direction: row;
 	justify-content: space-between;
 	background-color: rgba(0, 0, 0, 0.316);
-	/* Couleur de fond avec une légère opacité */
 	transition: background-color 0.3s ease;
-	/* Transition en douceur de la couleur de fond */
 	position: fixed;
 	width: 100%;
 	top: 0;
 	left: 0;
 	z-index: 1000;
-	/* Assurez-vous que l'en-tête est au-dessus de tout le contenu */
 }
 
 .header-image {
 	max-width: 125px;
-	/* La largeur maximale de l'image est de 100% de la largeur de son conteneur */
+	padding: 5px;
 	height: auto;
-	/* Gardez le rapport hauteur/largeur de l'image */
 	transition: max-width 0.3s ease;
-	/* Transition en douceur de la taille de l'image */
 }
 
 .transparent-header.scrolled {
 	background-color: rgba(255, 255, 255, 0);
-	/* Fond complètement transparent */
 	box-shadow: none;
-	/* Supprimez toute ombre si vous en avez une */
 }
 
 .header-buttons {
@@ -162,13 +154,12 @@ a {
 }
 
 #presentation {
-	margin-left: 30%;
-	margin-right: 30%;
+	margin-left: 20%;
+	margin-right: 20%;
 	padding: 1rem;
 	background-image: linear-gradient(to bottom left, rgba(68, 67, 67, 0.5) 0%, transparent 100%);
 	border-radius: 15px;
 	box-shadow: 0 0.25rem 0.5rem rgba(128, 128, 128, 0.2);
-	box-shadow: none;
 }
 
 p {
@@ -180,4 +171,91 @@ h1 {
 	font-family: 'DM Sans', sans-serif;
 	color: white;
 	text-align: center;
+}
+
+.menu {
+	max-width: 70px;
+	padding: 5px;
+	height: auto;
+	transition: max-width 0.3s ease;
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
+	display: none;
+	padding: 0;
+}
+
+.line {
+	fill: none;
+	stroke: rgb(231, 231, 231);
+	stroke-width: 6;
+	transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+		stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line1 {
+	stroke-dasharray: 60 207;
+	stroke-width: 6;
+}
+
+.line2 {
+	stroke-dasharray: 60 60;
+	stroke-width: 6;
+}
+
+.line3 {
+	stroke-dasharray: 60 207;
+	stroke-width: 6;
+}
+
+.opened .line1 {
+	stroke-dasharray: 90 207;
+	stroke-dashoffset: -134;
+	stroke-width: 6;
+}
+
+.opened .line2 {
+	stroke-dasharray: 1 60;
+	stroke-dashoffset: -30;
+	stroke-width: 6;
+}
+
+.opened .line3 {
+	stroke-dasharray: 90 207;
+	stroke-dashoffset: -134;
+	stroke-width: 6;
+}
+
+#burgerdiv {
+	width: 100%;
+	background-image: linear-gradient(to bottom left, rgba(68, 67, 67, 0.5) 0%, transparent 100%);
+	border-radius: 15px;
+	box-shadow: 0 0.25rem 0.5rem rgba(128, 128, 128, 0.2);
+	flex-direction: column;
+	position: fixed;
+	display: none;
+	margin-top: 125px;
+	padding-top: 20px;
+	transition: 0.2s;
+	height: auto;
+}
+
+#burgerdiv button {
+	margin-bottom: 10px;
+}
+
+@media screen and (max-width: 1000px) {
+	#presentation {
+		width: 100%;
+		border-radius: 0;
+		margin: 0;
+	}
+
+	.header-buttons {
+		display: none;
+	}
+
+	.menu {
+		display: flex;
+	}
 }
