--- a/style.css
+++ b/style.css
@@ -164,6 +164,10 @@ a {
 	box-shadow: 0 0.25rem 0.5rem rgba(128, 128, 128, 0.2);
 }
 
+.bottomdiv {
+	padding-bottom: 70px;
+}
+
 p {
 	color: rgb(180, 178, 178);
 	font-family: 'DM Sans', sans-serif;
@@ -295,8 +299,8 @@ h1 {
 }
 
 #team img {
-	border-radius: 20px;
-	box-shadow: 0 0.25rem 0.5rem rgba(128, 128, 128, 0.2);
+	border-radius: 10px;
+	filter: drop-shadow(.5rem .5rem 1rem rgb(0, 0, 0));
 	height: 50%;
 }
 
