--- a/style.css
+++ b/style.css
@@ -158,10 +158,16 @@ a {
 .presentation {
 	margin-left: 20%;
 	margin-right: 20%;
-	padding: 1rem;
+	padding: 2rem;
 	background-image: linear-gradient(to bottom left, rgba(68, 67, 67, 0.5) 0%, transparent 100%);
 	border-radius: 15px;
 	box-shadow: 0 0.25rem 0.5rem rgba(128, 128, 128, 0.2);
+	display: flex;
+	justify-content: center;
+}
+
+.presentation iframe {
+	border-radius: 14px;
 }
 
 .bottomdiv {
