--- a/style.css
+++ b/style.css
@@ -188,6 +188,12 @@ h1 {
 	text-align: center;
 }
 
+h2 {
+	font-family: 'DM Sans', sans-serif;
+	color: white;
+	text-align: center;
+}
+
 li {
 	padding-top: 10px;
 }
