--- a/style.css
+++ b/style.css
@@ -183,8 +183,27 @@ a {
 	justify-content: center;
 }
 
-.presentation2 iframe {
+.presentation3 {
+	font-family: 'DM Sans', sans-serif;
+	color: rgb(180, 178, 178);
+	margin-left: 15%;
+	margin-right: 15%;
+	padding: 2rem;
+	background-image: linear-gradient(to bottom left, rgba(68, 67, 67, 0.5) 0%, transparent 100%);
+	border-radius: 15px;
+	box-shadow: 0 0.25rem 0.5rem rgba(128, 128, 128, 0.2);
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.presentation3 iframe {
 	border-radius: 14px;
+	align-self: center;
+}
+
+.presentation3 .diff {
+	padding: 2rem;
 }
 
 .bottomdiv {
@@ -347,6 +366,13 @@ h1 {
 	}
 
 	.presentation2 {
+		width: 100%;
+		border-radius: 0;
+		margin-right: 0;
+		margin-left: 0;
+	}
+
+	.presentation3 {
 		width: 100%;
 		border-radius: 0;
 		margin-right: 0;
