--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ h1 {
 	padding-left: 30px;
 	padding-right: 30px;
 	padding-bottom: 10px;
-	height: 300px;
+	height: 360px;
 	width: 250px;
 	text-align: center;
 	color: rgb(180, 178, 178);
@@ -348,6 +348,11 @@ h1 {
 	margin-left: 20px;
 	margin-right: 20px;
 	margin-bottom: 40px;
+}
+
+.personne h4 {
+	margin-top: -10px;
+	font-size: 10px;
 }
 
 #team img {
